# Imagine-OS

./: README.cli.md  README.md  index.html  pyproject.toml  script.js  styles.css
apps/: browser.js  calculator.js  files.js  music.js  notes.js  settings.js
mycli/: cli.py
